Ensuring the Bootstrap Grid layout is correct when on tablet and lower devices

--- a/assets/style.css
+++ b/assets/style.css
@@ -138,3 +138,6 @@ img {
         width: 7rem;
     }
 }
+
+@media only screen and (max-width: 768px) {
+}
